[package]
name = "simple-pbft-demo"
version = "0.1.0"
edition = "2024"
default-run = "node"

[lib]
name = "simple_pbft_demo"
path = "src/lib.rs"

[[bin]]
name = "node"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
postcard = {version = "1.1.3", features = ["alloc"]}
quinn = "0.11.9"
rand = "0.10.0"
rcgen = "0.14.7"
ring = "0.17.14"
rustls = {version = "0.23.36", features = ["ring"]}
serde = {version = "1.0.228", features = ["derive"]}
sha2 = "0.10.9"
tokio = {version = "1.49.0", features = ["full"]}
